# backend/api/views/public.py
@@ -11,10 +11,11 @@ class Vacancies(BaseVacancyView):
     search_options = [
         'date_from',
         'date_to',
-        'search_query'
+        'search_query',
+        'source_name',
     ]
 
-    async def get(self):
+    async def get_list(self):
         """Get publiched vacancies list."""
         if self.request.query.keys() & set(self.search_options):
             validated_options = validation.validate_request_query(
@@ -31,6 +32,24 @@ class Vacancies(BaseVacancyView):
             limit=self.limit, offset=self.offset
         )
         response_data.update({'results': vacancies_data})
-        return validation.validate_response_data(
-            validation.PublishedVacancyList, response_data
+        return web.Response(body=response_data)
+
+    async def get_detail(self):
+        """Get info of vacancy."""
+        vacancy_id = self.request.match_info[self.lookup_field]
+        vacancies = await self.handle_filter(is_published=True, id=vacancy_id)
+        if len(vacancies) == 0:
+            return web.json_response({}, status=404)
+        return web.Response(body=vacancies[0])
+
+    async def post(self):
+        """Offer new vacancy via site feedback."""
+        vacancy_data = self.request.json()
+        vacancy_data.update({'is_published': False})
+        validated_data = validation.validate_request_data(
+            validation.PublishedVacancyCreate, vacancy_data
         )
+        created_vacancy = await self.handle_create(**validated_data)
+        return web.Response(body=created_vacancy)
+
+        
